# wfforge

./: .dockerignore  .env.docker  .env.example  .gitignore  DOCKER.md  Dockerfile  MIGRATION_GUIDE.md  README.md  REDIS_REMOVAL_GUIDE.md  docker-compose.yml  pyproject.toml  pyproject_minimal.toml  test.toml
docs/: GENERIC_INPUTS.md
scripts/: init_db.py  scheduler.sh  start.sh  start_all.sh  worker.sh
src/: config.py  database.py  main.py
src/tasks/: scheduler.py  worker.py
src/tasks/actions/: call_agent.py  input_file.py  merge_results.py  router.py
src/utils/: security.py
src/workflows/: deps.py  items.py  models.py  router.py  schemas.py  services.py
tests/: __init__.py  conftest.py  test_workflows_api.py
