[project]
name = "wfforge"
version = "0.1.0"
description = "A powerful workflow engine with FastAPI, Celery, and SQLite"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
wfforge = "src.main:main"

[project.dependencies]
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
celery = "^5.3.4"
redis = "^5.0.1"
sqlalchemy = "^2.0.23"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
alembic = "^1.12.1"
python-multipart = "^0.0.6"
structlog = "^23.2.0"
python-dotenv = "^1.0.0"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"